# ridehub

./: .gitignore  LICENSE  Procfile  README.md  TODO.md  behave.ini  manage.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  architecture.md  code-style.md  data-validation.md  development-environment.md  email-templates.md  frontend-styling.md  settings.json  testing.md
.claude/rules/: email-templates.md  frontend-styling.md  testing.md
.cursor/rules/: architecture.mdc  badge-usage.mdc  comments.mdc  development-environment.mdc  email.mdc  event-rendering-and-styling.mdc  event-styling.mdc  mobile-first.mdc  model-validation.mdc  styling.mdc  template-styling.mdc  testing.mdc
.github/workflows/: ci.yml
agents/: admin.py  middleware.py  models.py  services.py  urls.py  views.py
agents/migrations/: 0001_initial.py
agents/tests/: test_middleware.py  test_models.py  test_services.py  test_views.py
audit/: admin.py  context.py  models.py  services.py
audit/migrations/: 0001_initial.py  0002_rename_target_fields.py  0003_rename_subject_to_actor.py
audit/tests/: test_context.py  test_models.py  (+1 more)
backoffice/: actions.py  adapters.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  utils.py  widgets.py
content/: admin.py  models.py
data/: rwgps_club_routes.csv
docs/: security-audit-2026-05-20.md  users-authentication.md  users-configure-azure-ad-authentication.md  weather-forecast-algorithm.md
membership/: admin.py  models.py
ridehub/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/: context_processors.py  design_standards.md  filters.py  forms.py  tables.py  urls.py  utils.py  views.py
(+289 files in other folders)
