[project]
name = "ridehub"
version = "0.1.0"
description = "RideHub"
requires-python = ">=3.13"
dependencies = [
    "beartype~=0.22.5",
    "behave-django~=1.6.0",
    "celery~=5.4.0",
    "dj-database-url~=2.3.0",
    "django~=5.2.10",
    "django-allauth[socialaccount]~=65.14.0",
    "django-admin-sortable2~=2.2.8",
    "django-celery-beat~=2.8.1",
    "django-colorfield>=0.14.0",
    "django-cotton~=2.0.3",
    "django-fsm-2~=4.0.0",
    "django-gravatar2~=1.4.5",
    "django-ical~=1.9.2",
    "django-phonenumber-field[phonenumberslite]~=8.1.0",
    "django-prose-editor~=0.20.0",
    "django-sesame~=3.2.3",
    "django-waffle~=5.0.0",
    "gunicorn~=23.0.0",
    "psycopg~=3.2.12",
    "recordlinkage>=0.16",
    "redis~=5.2.1",
    "returns~=0.25.0",
    "sentry-sdk[django]~=2.50.0",
    "whitenoise~=6.11.0",
]
